<resources>
    <string name="app_name">TerraVision</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="message_welcome_page">TerraVision revolutionizes real estate investing for beginners by offering an AI-driven platform with lifelike simulations and prediction tools to simplify market analysis and decision-making.</string>
    <string name="title_welcome_page">Welcome to TerraVision!</string>
    <string name="title_signup_page">Complete your data below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">First, enter your data</string>
    <string name="title_login_page">Ready to connect with the world of real estate?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy investing and exploring!</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Logout</string>
    <string name="terravision">TerraVision</string>
    <string name="description">Add description...</string>
    <string name="judul">Title</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="story">Add to Story</string>
    <string name="more_information">More Information</string>
    <string name="id">ID</string>
    <string name="lon">Longitude</string>
    <string name="lat">Latitude</string>
    <string name="muhammad_daffa_fisabilillah">Muhammad Daffa Fisabilillah</string>
    <string name="share">Share</string>
    <string name="no_data_available">No Data Available</string>
    <string name="empty_image_warning">Empty Image Warning</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">empty text</string>
    <string name="refresh">refresh</string>
    <string name="story_title">Story Title</string>
    <string name="story_description">Story Description</string>
    <string name="masukkan_password">Enter Password</string>
    <string name="masukkan_email">Enter Email</string>
    <string name="masukkan_nama">Enter Name</string>
    <string name="image">image</string>
    <string name="passwordvalidasi1">Password must be at least 8 characters long</string>
    <string name="passwordvalidasi2">Password must contain at least one number</string>
    <string name="passwordvalidasi3">Password must contain at least one unique character</string>
    <string name="loginMessage">You have successfully logged in. Ready to dive into real estate mastery?</string>
    <string name="fullname">Full Name</string>
    <string name="looking_for_friends">Looking for friends</string>
    <string name="search_user">Search Friends…</string>
    <string name="login_message">Welcome to TerraVision! Ready to unlock the future of real estate investing?</string>
    <string name="contact">Contact</string>
    <string name="type_a_message">type_a_message</string>
    <string name="chitchat">TerraVision</string>
    <string name="registration_success_message">Congratulations! Your account has been successfully created. Ready to transform your real estate journey with TerraVision?</string>
    <string name="title">Success</string>
    <string name="cont">Continue</string>
    <string name="show_password">Show Password</string>
    <string name="initializing_model">Initializing model, please wait...</string>
    <string name="dont_go_back">Dont Go Back !!</string>
    <string name="building_name">Building Name</string>
    <string name="location">Location</string>
    <string name="surface_area">Surface Area</string>
    <string name="building_area">Building Area</string>
    <string name="bedroom">Bedroom</string>
    <string name="bathroom">Bathroom</string>
    <string name="floor">Floor</string>
    <string name="year">Year</string>
    <string name="contact_name">Rianco Aritonang</string>
    <string name="contact_email">Aritonang@gmail.com</string>
    <string name="price_predict">Price Predict</string>
    <string name="profile_name">Your Name</string>
    <string name="profile_email">Your Email</string>
    <string name="profile_role">Your Role</string>
    <string name="favorite">Favorite</string>
    <string name="log_out">Log out</string>
    <string name="discover">Discover</string>
    <string name="your_new_house">your new house!</string>
    <string name="prediction_with_ai">Prediction with AI</string>
    <string name="tflite_is_not_initialized_yet">TfLite is not initialized yet</string>
    <string name="no_tflite_interpreter_loaded">No TFLite interpreter loaded</string>
    <string name="the_prices">The Prices</string>
    <string name="of_your_new_house">of your new house!</string>
    <string name="property_price">500.000.000</string>
    <string name="kpr">KPR</string>
    <string name="property_prices">Property Prices</string>
    <string name="currency_symbol">Rp</string>
    <string name="property_price_value">500.000.000</string>
    <string name="down_payment">Down Payment</string>
    <string name="down_payment_value">xx.xxx.xxx</string>
    <string name="credit_tenor">Credit Tenor</string>
    <string name="credit_tenor_value">xx</string>
    <string name="interest_rate">Interest Rate</string>
    <string name="interest_rate_value">x</string>
    <string name="percent">%</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="instalment">instalment</string>
    <string name="instalment_value">x.xxx.xxx</string>
    <string name="month">/Bulan</string>
    <string name="ai_title">Park Avenue</string>
    <string name="ai_location">Jakarta Barat</string>
    <string name="error_msg">Timed out</string>
    <string name="retry">Try again</string>
    <string name="property_name">Property Name</string>
    <string name="add_property">Add Property</string>
    <string name="name_hint">Name...</string>
    <string name="location_hint">Location...</string>
    <string name="surface_area_hint">Surface Area...</string>
    <string name="bedroom_hint">Bedrooms...</string>
    <string name="bathroom_hint">Bathrooms...</string>
    <string name="building_area_hint">Building Area...</string>
    <string name="floor_hint">Floor...</string>
    <string name="year_hint">Year Built...</string>
    <string name="description_hint">Description...</string>
</resources>
