<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.detailprofile.DetailProfileActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/primary_dark">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:id="@+id/background_top"
                android:layout_width="0dp"
                android:layout_height="0dp"
                style="@style/SCREEN2"
                app:layout_constraintDimensionRatio="1.2425:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_profile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                app:srcCompat="@drawable/ic_capture"
                android:background="@drawable/background_image"
                app:layout_constraintBottom_toBottomOf="@+id/background_top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_profile" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:inputType="number"
                android:text="@string/profile_email"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_name"
                tools:ignore="SmallSp,TextViewEdits" />

            <TextView
                android:id="@+id/profile_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:inputType="number"
                android:text="@string/profile_role"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_email"
                tools:ignore="SmallSp,TextViewEdits" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/background_top"
                style="@style/SCREEN2" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="-42dp" />

            <ProgressBar
                android:id="@+id/progressBar5"
                style="?android:attr/progressBarStyle"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="@+id/image_profile"
                app:layout_constraintEnd_toEndOf="@+id/image_profile"
                app:layout_constraintStart_toStartOf="@+id/image_profile"
                app:layout_constraintTop_toTopOf="@+id/image_profile"
                tools:visibility="invisible" />

            <!-- RecyclerView and other views -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/background_content_buttom_main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/background_top">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp">
                    <TableRow>
                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="24dp"
                            android:layout_gravity="center_vertical"
                            style="@style/icon"
                            />

                        <TextView
                            android:textStyle="bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:text="@string/favorite"
                            style="@style/TEXT_Profile"
                            android:textSize="18sp" />
                    </TableRow>
                </TableLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/user_buildrecycleView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:overScrollMode="never"
                    android:layout_marginTop="50dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:listitem="@layout/item_savebuilding"/>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="140dp">
                    <TableRow>
                        <TextView
                            android:id="@+id/btn_signOut"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:textSize="18sp"
                            style="@style/TEXT_Profile"
                            android:textStyle="bold"
                            android:text="@string/log_out"
                            />
                    </TableRow>
                </TableLayout>
                <TextView
                    android:id="@+id/textErrorMessage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginStart="24sp"
                    android:layout_marginEnd="24sp"
                    android:textColor="@color/error"
                    android:textSize="12sp"
                    android:visibility="gone"/>
            </FrameLayout>

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">
                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottomNavigationView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/SCREEN_Navigasi"
                    app:labelVisibilityMode="labeled"
                    app:menu="@menu/bottom_menu"
                    android:layout_gravity="bottom"/>
            </androidx.coordinatorlayout.widget.CoordinatorLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
